# bank-operations-widget

./: .coverage  .env.template  .flake8  .gitignore  README.md  check_data.py  mypy.ini  pyproject.toml  requirements.txt  tatus --ignored  test_widget.py
data/: operations.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_6e0055cf009efd65___init___py.html  z_6e0055cf009efd65_generators_py.html  z_af904eb997881aa8___init___py.html  z_af904eb997881aa8_account_py.html
src/: external_api.py  main.py  pandas_processing.py  patterns.py  processing.py  utils.py  widget.py
src/decorators/: decorators.py
src/generators/: generators.py
src/masks/: __init__.py  account.py
src/src/: patterns.py
tests/: test_account.py  test_api.py  test_decorators.py  test_external_api.py  test_generators.py  test_pandas.py  test_pandas_processing.py  test_patterns.py  test_processing.py  test_utils.py  test_widget.py
