[tool.poetry]
name = "banking-utils"
version = "0.1.0"
description = "Утилиты для работы с банковскими данными"
authors = ["Viktor"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py313']
include = '\\.pyi?$'
extend-exclude = '''
/(
  \\.git
  | \\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
disallow_untyped_defs = true
warn_unused_configs = true
exclude = [
    "\\.venv",
    "\\.git",
    "build",
    "dist"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]